deploy/windows/rules-b2.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.110.1/32 -p tcp --dport 5432 -j ACCEPT
-A INPUT -s 192.168.110.1/32 -p tcp --dport 8080 -j ACCEPT
-A INPUT -s 192.168.110.1/32 -p tcp --dport 8081 -j ACCEPT
-A INPUT -s 192.168.110.0/24 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
COMMIT
